2025-09-05T00:49:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17480454266 # 757
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-05
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 465 1484 / 469 1488
* notice: next accum: outdated-unq outdated-all / unq all: 466 1485 / 469 1488
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-21] / []

2025-09-04T00:48:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17449940396 # 756
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-04
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 464 1483 / 469 1488
* notice: next accum: outdated-unq outdated-all / unq all: 465 1484 / 469 1488
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-20] / []

2025-09-02T00:52:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17390110946 # 754
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-02
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 464 1483 / 468 1487
* notice: next accum: outdated-unq outdated-all / unq all: 464 1483 / 469 1488
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-01]

2025-08-29T00:51:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17311584960 # 750