@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-05T00:49:55Z",
-  "count_outdated" : 1485,
-  "uniques_outdated" : 466,
+  "timestamp" : "2025-09-09T00:50:54Z",
+  "count_outdated" : 1486,
+  "uniques_outdated" : 467,
   "count" : 1488,
   "uniques" : 469,
   "views" : [
-    {
-      "timestamp": "2025-08-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-27T00:00:00Z",
       "count": 1,
