@@ -1,3 +1,12 @@
+2025-09-09T00:50:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17568307840 # 761
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-09
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 466 1485 / 469 1488
+* notice: next accum: outdated-unq outdated-all / unq all: 467 1486 / 469 1488
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-08-25] / []
+
 2025-09-05T00:49:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17480454266 # 757
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-05
